2008-04-23  Sam Steingold  <sds@gnu.org>

	followup to the 2008-04-08 patch which broke log for very small numbers
	* comptran.d (N_log_abs_R): avoid the log(1 + (x^2 + y^2 - 1))
	trick for small numbers
	* realtran.d (ln2_F_float_F): use F_lnx1_F instead of F_lnx_F
	(F_lnx_F): move most of the calculation from R_ln1_R here
	(R_ln1_R): use either F_lnx1_F (small arg) or F_lnx_F (others)
	(R_ln_R): do not call R_ln1_R, call F_lnx_F directly

2008-04-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (installdirs, install-bin, uninstall): pass DESTDIR
	to make in po
	* po/Makefile.in.in (install-data-yes, installdirs): respect DESTDIR
	* configure: do not try to link po twice

2008-04-22  Sam Steingold  <sds@gnu.org>

	* arilev1.d, hashtabl.d, lisparit.d, lispbibl.d, misc.d:
	* pathname.d, spvw.d, spvw_garcol.d, spvw_memfile.d, time.d, unix.d:
	* xthread.d, modules/berkeley-db/bdb.c:
	"#error" does not need quotes around the message

2008-04-17  Sam Steingold  <sds@gnu.org>

	simplify support for FFI modules which want to use stdio.h
	* lispbibl.d (HAVE_FFI): export to clisp.h
	* foreign.d (init_ffi): register size_t and ssize_t
	* foreign1.lisp (size_t, ssize_t, FILE): add types
	* modules/bindings/glibc/linux.lisp ((size_t, ssize_t): do not redefine
	* modules/pari/pari.lisp (allocatemoremem): use size_t
	* modules/postgresql/postgresql.lisp (size_t): do not redefine
	(PQtrace, PQprint, PQdisplayTuples, PQprintTuples):
	use FILE instead of c-pointer
	* modules/syscalls/calls.c (fopen, fdopen, fclose)
	(clearerr, feof, ferror, fileno) [HAVE_FFI]: implement
	* modules/syscalls/posix.lisp (fopen, fdopen, fclose)
	(clearerr, feof, ferror, fileno) [FFI]: export

2008-04-17  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (FILE): define to c-pointer,
	use for all FILE functions instead of c-pointer

2008-04-17  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp: sync with libpq-fe.h 1.141 (8.3)